Completion od Portfolio

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
                 <li>SMOTE to handle class imbalance</li>
                 <li>SHAP for interpreting model predictions and identifying key factors influencing churn</li>
             </ul>
-            <a href="https://www.linkedin.com/in/anishaananthan06" target="_blank" class="project-link">View on GitHub</a>
+            <a href="https://github.com/Anisha452531/BankChurn" target="_blank" class="project-link">View on GitHub</a>
         </div>
 
         <div class="project-box">
