--- a/index.html
+++ b/index.html
@@ -7,30 +7,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="home-page-content">
-        <div class="text-content">
-            <h1>Anisha Ananthan</h1>
-            <p class="tagline">A passionate Computer Science Engineering student</p>
+    <section class="hero-section">
+        <div class="hero-content">
+            <h1>Hi, I am Anisha,<br>Creative Technologist</h1>
+            <p>I’m Anisha, a passionate Computer Science Engineering student who loves turning ideas into innovative solutions. Skilled in web development, database management, and machine learning, I enjoy building projects that make an impact. I have hands-on experience with technologies like HTML, CSS, PHP, MySQL, and Python. Always eager to learn and explore new tools, I strive to create solutions that combine creativity with technology.</p>
+            <a href="#about-me-section" class="download-resume-btn">About Me</a>
 
-            <h2>A Bit About Me</h2>
-            <p class="about-text">Hi! I’m Anisha, a passionate Computer Science Engineering student who loves turning ideas into innovative solutions. Skilled in web development, database management, and machine learning, I enjoy building projects that make an impact. I have hands-on experience with technologies like HTML, CSS, PHP, MySQL, and Python. Always eager to learn and explore new tools, I strive to create solutions that combine creativity with technology.</p>
-
-            <div class="quick-links-home">
-                <a href="projects.html" class="btn">Projects</a>
-                <a href="certificates.html" class="btn">Certificates</a>
-                <a href="skills.html" class="btn">Skills</a>
-                <a href="extras.html" class="btn">Extras</a>
-            </div>
-
-            <div class="social-icons-home">
-                <a href="https://www.linkedin.com/in/anishaananthan06" target="_blank" class="social-icon-link linkedin" aria-label="LinkedIn"></a>
-                <a href="https://github.com/Anisha452531" target="_blank" class="social-icon-link github" aria-label="GitHub"></a>
-                <a href="mailto:anishaka06@gmail.com" class="social-icon-link email" aria-label="Email"></a>
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/in/anishaananthan06" target="_blank" class="social-icon-link linkedin" aria-label="LinkedIn"><span>LinkedIn</span></a>
+                <a href="https://github.com/Anisha452531" target="_blank" class="social-icon-link github" aria-label="GitHub"><span>GitHub</span></a>
+                <a href="mailto:anishaka06@gmail.com" class="social-icon-link email" aria-label="Email"><span>Email</span></a>
             </div>
         </div>
+        <div class="hero-image-container">
+            <img src="images/Profile.png" alt="Anisha Ananthan's Profile Picture" class="hero-image">
+        </div>
+    </section>
 
-        <div class="profile-image-container">
-            <img src="images/Profile.png" alt="Anisha Ananthan's Profile Picture" class="profile-image">
+    <div class="about-me-section" id="about-me-section">
+        <h2>My Journey & Skills</h2>
+        <p>This section provides a more detailed look into my background and what I offer. As a Computer Science Engineering student, I thrive on challenges and continuous learning. My journey involves not just theoretical understanding but also practical application in various projects.</p>
+        <p>I am particularly interested in the intersection of web technologies and data science, constantly seeking to improve my skills in both frontend and backend development, as well as machine learning algorithms. My goal is to build impactful and user-friendly applications.</p>
+        
+        <div class="quick-links">
+            <a href="projects.html" class="btn">Projects</a>
+            <a href="certificates.html" class="btn">Certificates</a>
+            <a href="skills.html" class="btn">Skills</a>
+            <a href="extras.html" class="btn">Extras</a>
         </div>
     </div>
 
